# SRW

./: .project  README.md
R/: TDMA.R  boundary.heat.equ.R  dependencies.R  diff_scheme.R  minres.R  poisson.equ.sq.2D.R  precond.R  tma.R
R/comp_math/: Fredholm.R  MonteCarlo.R  batman.R  clearWorkspace.R  dataFrame.R  derivative.R  diff_scheme.R  formData.R  fromDataDev.R  functions.R  integral.R  koshi.R  koshi.final.R  nlequ.R  nlsys.R  parab.R  shooting.method.R
R/data/performance.tests/: test.test.csv
R/experimental/: seq.test.parallel.poisson.2D.equ.R  slv.poisson.experimental.R
R/raw/: perf.figure.R  surface.plotting.R
cpp/Headers/: eigen3matrix.h  eigen3vector.h  lsolvers.h  preconditioners.h  solvers.h  srwmatrix.h  srwvector.h
cpp/Headers/Preconditioning/: par2DPreconditioner.h  preconditioner.h  preconditioners.h
cpp/Source/: eigen3matrix.cpp  eigen3vector.cpp  lsolvers.cpp  main.cpp  solvers.cpp
cpp/tests/Poisson2DSquareArea/: Poisson2DSquareAreaTests  Test2DPoissonSquareArea.h  Test2DPoissonSquareAreaN1.h  Test2DPoissonSquareAreaN2.h  Test2DPoissonSquareAreaN3.h  Test2DPoissonSquareAreaN4.h  Test2DPoissonSquareAreaN5.h
experimental/: seq.test.parallel.poisson.2D.equ.R  slv.poisson.experimental.R
src/: CMakeLists.txt  defs.h  main.cpp
src/.kdev4/: _custom.kdev4  src.kdev4
src/areas/: BArea.cpp  BArea.h  CMakeLists.txt  MathArea2d.cpp  MathArea2d.h  sampleArea2d.cpp  sampleArea2d.h
src/graphics/: CMakeLists.txt  graphics.cpp  graphics.h
src/lsolvers/: CMakeLists.txt  implexplBouss.cpp  implexplBouss.h  lsolver.cpp  lsolver.h  mincorr_kernels.cl  minres5d.cpp  minres5d.h  minres5dOclSSOR.cpp  minres5dOclSSOR.h  minres5dOmpSSOR.cpp  minres5dOmpSSOR.h  minres5dseq.cpp  minres5dseq.h
src/precond/: CMakeLists.txt  SSORpar.cpp  SSORpar.h
src/scripts/: build.pl  run.pl
src/testing/: Makefile  main.cpp
tests/: TDMA.R
